force-app/main/default/objects/Opportunity_Review__c/fields/Buying_Process_Stages__c.field-meta.xml
<CustomField>
    <fullName>Buying_Process_Stages__c</fullName>
    <label>Buying Process Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5% Kunden er fornøyd, men...</fullName>
            </value>
            <value>
                <fullName>10% Kunden har erkjent at de har et problem</fullName>
            </value>
            <value>
                <fullName>30%  Kunden har begynt å se etter alternativer</fullName>
            </value>
            <value>
                <fullName>60% Kunden har publisert RFP / bedt om tilbud</fullName>
            </value>
            <value>
                <fullName>80% Tilbudsavklaringer og forhandlinger</fullName>
            </value>
            <value>
                <fullName>100% Kunden har akseptert vårt tilbud</fullName>
            </value>
            <value>
                <fullName>20% RON ENs - RON INs + ENs</fullName>
                <isActive>false</isActive>
                <label>20% RON ENs - RON INs + ENs</label>
            </value>
            <value>
                <fullName>40% EOO - DGs &amp; Objections</fullName>
                <isActive>false</isActive>
                <label>40% EOO - DGs &amp; Objections</label>
            </value>
            <value>
                <fullName>60% ROC - Concerns &amp; Consequences</fullName>
                <isActive>false</isActive>
                <label>60% ROC - Concerns &amp; Consequences</label>
            </value>
            <value>
                <fullName>80% NEG - Informal Commitment</fullName>
                <isActive>false</isActive>
                <label>80% NEG - Informal Commitment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>