force-app/main/default/objects/Opportunity_Review__c/fields/Buying_Process_Steps__c.field-meta.xml
<CustomField>
    <fullName>Buying_Process_Steps__c</fullName>
    <label>Buying Process Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>