force-app/main/default/objects/Opportunity_Review__c/fields/Explicit_Needs__c.field-meta.xml
<CustomField>
    <fullName>Explicit_Needs__c</fullName>
    <inlineHelpText>Wants, desires or intentions</inlineHelpText>
    <label>Explicit Needs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>