force-app/main/default/objects/Opportunity_Review__c/fields/Implied_Needs__c.field-meta.xml
<CustomField>
    <fullName>Implied_Needs__c</fullName>
    <inlineHelpText>Pproiblems, difficulties or dissatisfactions</inlineHelpText>
    <label>Implied Needs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>