force-app/main/default/objects/Opportunity_Review__c/fields/Key_Background_Information__c.field-meta.xml
<CustomField>
    <fullName>Key_Background_Information__c</fullName>
    <inlineHelpText>Situation</inlineHelpText>
    <label>Key Background Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>