force-app/main/default/objects/Opportunity_Review__c/fields/Last_Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Outcome__c</fullName>
    <label>Last Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>Continuation</fullName>
            </value>
            <value>
                <fullName>No sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>