force-app/main/default/objects/Opportunity_Review__c/fields/Opportunity_Review_Description__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Review_Description__c</fullName>
    <label>Opportunity Review Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>