force-app/main/default/objects/Opportunity_Review__c/fields/Power_of_1__c.field-meta.xml
<CustomField>
    <fullName>Power_of_1__c</fullName>
    <description>This field is crucial for reporting because it just shows the unique opportunities and no duplicates</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Power of 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>