force-app/main/default/objects/Opportunity_Review__c/fields/Sales_Management_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Management_Review_Notes__c</fullName>
    <label>Sales Management Review Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>