force-app/main/default/objects/Opportunity_Review__c/fields/Summary_of_Terms__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Terms__c</fullName>
    <label>Summary of Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>