force-app/main/default/objects/Opportunity_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Opportunity__c</columns>
    <columns>Buying_Process_Stages__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>